# revirathya-toolbox

./: Dockerfile  Makefile  README.md  build.sh  pyproject.toml
src/revi_toolbox/: __init__.py
src/revi_toolbox/adapters/: __init__.py
src/revi_toolbox/adapters/mongo/: adapter.py  schema.py
src/revi_toolbox/adapters/postgres/: adapter.py  schema.py
src/revi_toolbox/log/: __init__.py  adapter.py
src/revi_toolbox/mongo/: __init__.py
src/revi_toolbox/scraper/: utility.py
src/revi_toolbox/scraper/manga/: __init__.py  base.py  schemas.py
src/revi_toolbox/scraper/manga/runner/: mangabats.py
