[project]
name = "revi_toolbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "avidito", email = "av.leonardif@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.1",
    "pymongo>=4.11.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
